@@ -1,6 +1,9 @@
 WebHelpers ChangeLog
 
 0.3.1 (**svn**)
+* Added the secure_form_tag helper module, for generating form tags
+  including client-specific authorization tokens for preventing CSRF
+  attacks. Original patch by David Turner. Fixes #157.
 * current_url now accepts arguments to pass along to url_for. Fixes #251.
 * Updated prototype to 1.5.1.
 * Added image support to button_to. Patch by Alex Conrad. Fixes #184.
